2009-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/src/ioregisterdriver.c: Fix spacing.

2009-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Rework to make easier to analyze for code
	coverage and to simplify so it is easier to analyze for correctness.

2009-07-24	Roxana Leontie <roxana.leontie@gmail.com>

	* libmisc/mw-fb/mw_fb.h: divided fb_screeninfo structure into
	fb_var_screeninfo and fb_fix_screeninfo

2009-07-23	Ralf Corsepius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4: Default to not building itron.

2009-07-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/timerreset.c: Mark an unreachable path that is a sanity
	check as conditional on RTEMS_DEBUG.

2009-07-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/iterateoverthreads.c: Restructure a bit to make analysis
	easier.

2009-07-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am, libmisc/shell/main_chmod.c,
	libmisc/shell/main_mdump.c, libmisc/shell/main_medit.c,
	libmisc/shell/main_mfill.c, libmisc/shell/main_mmove.c,
	libmisc/shell/main_msdosfmt.c, libmisc/shell/main_mwdump.c,
	libmisc/shell/main_sleep.c, libmisc/shell/main_umask.c,
	libmisc/shell/shell_script.c, libmisc/stringto/stringto.h,
	libmisc/stringto/stringto_template.h: Convert return type from bool
	to rtems_status_code and add rtems_string_to_pointer. Perform
	associated clean up and changes for return type change.
	* libmisc/stringto/stringtopointer.c: New file.

2009-07-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Clean up. Avoid NULL pointer case.

2009-07-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/inline/rtems/score/states.inl: Add
	_States_Is_interruptible_by_signal. Add more DOxygen comments and
	clean up.

2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/main_help.c: Provide a few more characters for command
	names.

2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>
