@@ -1,3 +1,8 @@
+2009-07-26	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* score/Makefile.am, score/preinstall.am: SuperCore Spinlock is only
+	used by POSIX API. Do not build it when POSIX is not enabled.
+
 2009-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* sapi/src/ioregisterdriver.c: Fix spacing.
